logs/job_1206.err
  File "/home/ihubnvidia20/vqe4.py", line 68
    basis="sto3g",
    ^
SyntaxError: invalid syntax
